--- a/src/Squares.css
+++ b/src/Squares.css
@@ -2,7 +2,7 @@
     width: 250px;
     height: 250px;
     /* background: rgba(25,52,65,0.75); */
-    background: rgba(0,0,0,0.75);
+    /* background: rgba(0,0,0,0.75); */
     /* background: #ffffcb; */
     border-radius:25px;
 }
