--- a/src/Dots.css
+++ b/src/Dots.css
@@ -23,43 +23,50 @@
   background: white;
   border-radius: 25px;
   position: absolute;
-  margin-top: 200px;
+  margin-top: 225px;
+  z-index: 1;
 }
 @keyframes jump {
   0% {
     top: 0;
+    opacity: 0.75;
   }
   40% {
     top: 0;
+    opacity: 0.75;
   }
   50% {
-    top: -7.5%;
+    top: -30px;
+    opacity: 1;
   }
   70% {
     top: 0;
+    opacity: 0.75;
   }
   100% {
     top: 0;
+    opacity: 0.75;
   }
 }
 .bubble {
-  width: 180px;
-  height: 140px;
-  background: #4080ff;
-  border-radius: 25%;
-  margin-top: 110px;
-  margin-left: 240px;
-  padding-left: 70px;
+  width: 100px;
+height: 80px;
+background: #4080ff;
+border-radius: 25%;
+margin-top: 110px;
+margin-left: 240px;
+padding: 9px 30px 40px 30px;
 }
 
 .bubble::after {
   content: "";
-  width: 70px;
-  height: 70px;
-  background: #4080ff;
-  margin-top: 110px;
-  position: absolute;
-  -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
-  clip-path: polygon(0 0, 0% 100%, 100% 0);
-  margin-left: -160px;
+width: 102px;
+height: 50px;
+background: #4080ff;
+margin-top: 110px;
+position: absolute;
+-webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
+clip-path: polygon(0 0, 0% 100%, 100% 0);
+margin-left: -30px;
+margin-top: 89px;
 }
